# x64dbg-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  test_mcp_client.mjs  test_mcp_e2e.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/plans/: 2026-05-08-multi-session.md
plugin/: README.md  test_bridge.py  x64dbg_bridge_sdk.py  x64dbg_mcp_bridge.py
plugin/loader/: .gitignore  CMakeLists.txt  x64dbg_mcp_loader.c
plugin/tests/: test_bridge.py
scripts/: bridge-auth.mjs  ci.mjs  doctor.mjs  install-plugin.mjs  install-plugin.ps1  postinstall.mjs  prepack.mjs  setup-x64dbg.mjs  setup.mjs  sync-plugin.mjs
scripts/manual/: run_admin_test.ps1  run_http_attach_process_name_smoke.ps1  run_service_smoke.ps1  test_attach.mjs  test_http_transport.mjs
src/: bridge.ts  bridgeRegistry.ts  cli.ts  config.ts  errors.ts  httpServer.ts  launcher.ts  logger.ts  mcpServer.ts  server.ts  session.ts  types.ts
src/service/: elevate.ts  env-file.ts  health-check.ts  install.ts  installed-json.ts  lifecycle.ts  paths.ts  privilege.ts  router.ts  shim-template.ts  status-formatter.ts  status.ts  types.ts  uninstall.ts
src/tools/: analysis.ts  debug.ts  index.ts  memory.ts  security.ts
test/: basic.test.ts
test/e2e/: _target.mjs  test_mcp_client.mjs  verify_attach_chain.mjs  verify_breakpoint_chain.mjs  verify_detach_chain.mjs  verify_hardware_breakpoint_chain.mjs  verify_memory_breakpoint_chain.mjs  verify_memory_write_breakpoint_chain.mjs  verify_run_to_address_chain.mjs  verify_step_chain.mjs  verify_step_out_chain.mjs
test/fixtures/: CMakeLists.txt  http_client.c  http_server.c
test/integration/: multi-session.test.ts
test/service/: cli-parsing.test.ts  elevate-runner.test.ts  paths.test.ts  (+6 more)
(+7 files in other folders)
